# ext-data-recovery

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  ext-data-recovery.c
include/journal/: jfs_compat.h  jfs_user.h  journal.h
src/: CMakeLists.txt  journal.c  recovery.c  revoke.c
